Updating user service page

--- a/Templates/Accomodation.html
+++ b/Templates/Accomodation.html
@@ -15,9 +15,10 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">          
               <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span>      
-              <a class="navbar-brand">
+              <div id="logodiv">
                 <img class="logo" src="../Images/Logo1.png" alt="Logo" >
-              </a>
+              </div>
+              
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
