--- a/Templates/service.html
+++ b/Templates/service.html
@@ -13,9 +13,9 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">          
               <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span>      
-              <a class="navbar-brand">
+              <div id="logodiv">
                 <img class="logo" src="../Images/Logo1.png" alt="Logo" >
-              </a>
+              </div>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -31,54 +31,40 @@
             <a href="#">Nearby Status</a>
             <a href="#">Missing Identity</a>
         </div>
-          
-        
+          <br> <br>
+        <h2 style="color : red;" > Service Helpline Numbers </h2>
 
-        <br><br><br>
+
+        <br><br>
 
         <table>
             <tr>
-              <th>Name of Center</th>
-              <th>Accomodation</th>
-              <th>Stocks</th>
-              <th>Location</th>
+              <th>Help Line Service </th>
+              <th>Number</th>
             </tr>
             <tr>
-              <td>Help Relief Center</td>
-              <td>50</td>
-              <td>100</td>
-              <td>Alpha-1</td>
-
+              <td>NATIONAL EMERGENCY NUMBER</td>
+              <td>112</td>
             </tr>
             <tr>
-                <td>Help Relief Center</td>
-                <td>20</td>
-                <td>900</td>
-                <td>Alpha-2</td>
-            </tr>
-            <tr>
-                <td>Gu Emergency Center</td>
-                <td>500</td>
-                <td>1000</td>
-                <td>Galgotias University</td>
-            </tr>
-            <tr>
-                <td>Help Relief Center</td>
-                <td>50</td>
+                <td>Police Station</td>
                 <td>100</td>
-                <td>Alpha-1</td>
             </tr>
             <tr>
-                <td>Help Relief Center</td>
-                <td>50</td>
-                <td>100</td>
-                <td>Alpha-1</td>
+                <td>Ambulance</td>
+                <td>102</td>
             </tr>
             <tr>
-                <td>Help Relief Center</td>
-                <td>50</td>
-                <td>100</td>
-                <td>Alpha-1</td>
+                <td>Fire</td>
+                <td>101</td>
+            </tr>
+            <tr>
+                <td>Disaster Management Services</td>
+                <td>108</td>
+            </tr>
+            <tr>
+                <td>Air Ambulance</td>
+                <td>9540161344 </td>
             </tr>
         </table>
 
