--- a/Templates/missing.html
+++ b/Templates/missing.html
@@ -13,9 +13,9 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">               
             <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span> 
-              <a class="navbar-brand">
-                <img class="logo" src="../Images/Logo1.png" alt="Logo">
-              </a>
+              <div id="logodiv">
+                <img class="logo" src="../Images/Logo1.png" alt="Logo" >
+              </div>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
