--- a/Templates/userhomepage.html
+++ b/Templates/userhomepage.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Sahayak - User Homepage</title>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
@@ -19,9 +19,11 @@
             <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span>      
             <a class="navbar-brand"></a>
           </div>
+
           <div id="logodiv">
             <img class="logo" src="../Images/Logo1.png" alt="Logo" >
           </div>
+
           <div id="search">
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
