Added liinks to go to other pages

--- a/Templates/Accomodation.html
+++ b/Templates/Accomodation.html
@@ -34,61 +34,69 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#">About us</a>
-            <a href="#">Nearest Service Location</a>
-            <a href="#">Stocks and Accomodation</a>
-            <a href="#">Service Helpline Number</a>
+            <a href="service.html">Nearest Service Location</a>
+            <a href="Accomodation.html">Stocks and Accomodation</a>
+            <a href="service.html">Service Helpline Number</a>
             <a href="#">Nearby Status</a>
-            <a href="#">Missing Identity</a>
+            <a href="missing.html">Missing Identity</a>
         </div>
           
         
 
         <br><br><br>
 
-        <table>
+        <table class="accomodation-table">
+          <thead>
             <tr>
               <th>Name of Center</th>
               <th>Accomodation</th>
               <th>Stocks</th>
               <th>Location</th>
             </tr>
+          </thead>
+          <tbody>
             <tr>
               <td>Help Relief Center</td>
               <td>50</td>
               <td>100</td>
               <td>Alpha-1</td>
-
             </tr>
+        
             <tr>
-                <td>Help Relief Center</td>
-                <td>20</td>
-                <td>900</td>
-                <td>Alpha-2</td>
+              <td>Help Relief Center</td>
+              <td>20</td>
+              <td>900</td>
+              <td>Alpha-2</td>
             </tr>
+        
             <tr>
-                <td>Gu Emergency Center</td>
-                <td>500</td>
-                <td>1000</td>
-                <td>Galgotias University</td>
+              <td>Gu Emergency Center</td>
+              <td>500</td>
+              <td>1000</td>
+              <td>Galgotias University</td>
             </tr>
+        
             <tr>
-                <td>Help Relief Center</td>
-                <td>50</td>
-                <td>100</td>
-                <td>Alpha-1</td>
+            <td>Help Relief Center</td>
+            <td>50</td>
+            <td>100</td>
+            <td>Alpha-1</td>
             </tr>
+        
             <tr>
-                <td>Help Relief Center</td>
-                <td>50</td>
-                <td>100</td>
-                <td>Alpha-1</td>
+              <td>Help Relief Center</td>
+              <td>50</td>
+              <td>100</td>
+              <td>Alpha-1</td>
             </tr>
+        
             <tr>
-                <td>Help Relief Center</td>
-                <td>50</td>
-                <td>100</td>
-                <td>Alpha-1</td>
+              <td>Help Relief Center</td>
+              <td>50</td>
+              <td>100</td>
+              <td>Alpha-1</td>
             </tr>
+          </tbody>
         </table>
 
         <script>
