--- a/Templates/service.html
+++ b/Templates/service.html
@@ -23,13 +23,13 @@
             </div>
         </nav>
         <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">About us</a>
-            <a href="#">Nearest Service Location</a>
-            <a href="#">Stocks and Accomodation</a>
-            <a href="#">Service Helpline Number</a>
-            <a href="#">Nearby Status</a>
-            <a href="#">Missing Identity</a>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="#">About us</a>
+          <a href="service.html">Nearest Service Location</a>
+          <a href="Accomodation.html">Stocks and Accomodation</a>
+          <a href="service.html">Service Helpline Number</a>
+          <a href="#">Nearby Status</a>
+          <a href="missing.html">Missing Identity</a>
         </div>
           
         
