--- a/Templates/missing.html
+++ b/Templates/missing.html
@@ -13,9 +13,9 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">               
             <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span> 
-              <div id="logodiv">
-                <img class="logo" src="../Images/Logo1.png" alt="Logo" >
-              </div>
+              <a class="navbar-brand">
+                <img class="logo" src="../Images/Logo1.png" alt="Logo">
+              </a>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -37,7 +37,102 @@
         <br><br><br>
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Name- Akshat SIngh</h5>
+                        <p class="card-text"></p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Name- AKshat Singh</h5>
+                        <p class="card-text">Age- 22</p>
+                        <p class="card-text">Missing Since- 2012</p>
+                        <p class="card-text">Police Station- GU Chowk</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Name- AKshat Singh</h5>
+                        <p class="card-text">Age- 22</p>
+                        <p class="card-text">Missing Since- 2012</p>
+                        <p class="card-text">Police Station- GU Chowk</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Name- AKshat Singh</h5>
+                        <p class="card-text">Age- 22</p>
+                        <p class="card-text">Missing Since- 2012</p>
+                        <p class="card-text">Police Station- GU Chowk</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Name- AKshat Singh</h5>
+                        <p class="card-text">Age- 22</p>
+                        <p class="card-text">Missing Since- 2012</p>
+                        <p class="card-text">Police Station- GU Chowk</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Name- AKshat Singh</h5>
+                        <p class="card-text">Age- 22</p>
+                        <p class="card-text">Missing Since- 2012</p>
+                        <p class="card-text">Police Station- GU Chowk</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                    </div>
+                </div>
+            </div>
             <div class="col">
                 <div class="card">
                     <img src="../Images/logo.png" class="card-img-top" alt="...">
