--- a/css/accod.css
+++ b/css/accod.css
@@ -4,18 +4,13 @@
 
 #search{
   align-self: right;
+  margin-right: 2vh;
 }
 
 .logo{
-
   display: block;
   width: 200px;
   height: 80px;
-}
-
-    display: block;
-    width: 200px;
-    height: 80px;
 }
 
 
@@ -26,15 +21,11 @@
   overflow: hidden;
 
 }
+
 body{
     background-image: linear-gradient(rgb(255,255,255),rgb(82, 193, 245));   
     background-attachment: fixed; 
 
-}
-
-body{
-      background-image: linear-gradient(rgb(255,255,255),rgb(82, 193, 245));   
-      background-attachment: fixed; 
 }
 
 table.accomodation-table {
