--- a/Templates/missing.html
+++ b/Templates/missing.html
@@ -11,16 +11,23 @@
     </head>
     <body>
         <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">               
-            <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span> 
-              <a class="navbar-brand">
-                <img class="logo" src="../Images/Logo1.png" alt="Logo">
-              </a>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-            </div>
+            <div class="container-fluid">          
+                <div id="menu">
+                  <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span>      
+                  <a class="navbar-brand"></a>
+                </div>
+      
+                <div id="logodiv">
+                  <img class="logo" src="../Images/Logo1.png" alt="Logo" >
+                </div>
+      
+                <div id="search">
+                  <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+                </div>
+              </div>
         </nav>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
