added cards to missing page

--- a/Templates/missing.html
+++ b/Templates/missing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Sahayata</title>
+        <title>Sahayata - Missing Identity</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/missing.css">
@@ -43,175 +43,78 @@
 
         <br><br><br>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- Akshat SIngh</h5>
-                        <p class="card-text"></p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="card-deck">
+            <div class="col">
+              <div class="card">
+                <img src="../Images/avatar.png" class="card-img-top" alt="Profile Picture">
+                <div class="card-body">
+                  <h5 class="card-title">Name- Akshat Singh</h5>
+                  <p class="card-text">Age- 22</p>
+                  <p class="card-text">Missing Since- 2012</p>
+                  <p class="card-text">Police Station- GU Chowk</p>
                 </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
+            <div class="col">
+              <div class="card">
+                <img src="../Images/avatar.png" class="card-img-top" alt="Profile Picture">
+                <div class="card-body">
+                  <h5 class="card-title">Name- Akshat Singh</h5>
+                  <p class="card-text">Age- 22</p>
+                  <p class="card-text">Missing Since- 2012</p>
+                  <p class="card-text">Police Station- GU Chowk</p>
                 </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
+            <div class="col">
+              <div class="card">
+                <img src="../Images/avatar.png" class="card-img-top" alt="Profile Picture">
+                <div class="card-body">
+                  <h5 class="card-title">Name- Akshat Singh</h5>
+                  <p class="card-text">Age- 22</p>
+                  <p class="card-text">Missing Since- 2012</p>
+                  <p class="card-text">Police Station- GU Chowk</p>
                 </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                    <img src="../Images/logo.png" class="img-fluid rounded-start" alt="Person1">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                    </div>
-                </div>
+              </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="../Images/logo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
+                <img src="../Images/avatar.png" class="card-img-top" alt="Profile Picture">
+                  <div class="card-body">
+                    <h5 class="card-title">Name- Akshat Singh</h5>
+                    <p class="card-text">Age- 22</p>
+                    <p class="card-text">Missing Since- 2012</p>
+                    <p class="card-text">Police Station- GU Chowk</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
                 </div>
-            </div>
-            <div class="col">
+              </div>
+              <div class="col">
                 <div class="card">
-                    <img src="../Images/logo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
+                    <img src="../Images/avatar.png" class="card-img-top" alt="Profile Picture">
+                  <div class="card-body">
+                    <h5 class="card-title">Name- Akshat Singh</h5>
+                    <p class="card-text">Age- 22</p>
+                    <p class="card-text">Missing Since- 2012</p>
+                    <p class="card-text">Police Station- GU Chowk</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="../Images/logo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="../Images/logo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="../Images/logo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Name- AKshat Singh</h5>
-                        <p class="card-text">Age- 22</p>
-                        <p class="card-text">Missing Since- 2012</p>
-                        <p class="card-text">Police Station- GU Chowk</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+              </div>
+          </div>
 
 
         <script>
