added link to homepage

--- a/Templates/Accomodation.html
+++ b/Templates/Accomodation.html
@@ -20,7 +20,9 @@
               </div>         
 
               <div id="logodiv">
-                <img class="logo" src="../Images/Logo1.png" alt="Logo" >
+                <a href="userhomepage.html">
+                  <img class="logo" src="../Images/Logo1.png" alt="Logo" >
+                </a>
               </div>
 
               <div id="search">
