--- a/Templates/service.html
+++ b/Templates/service.html
@@ -14,7 +14,9 @@
             <div class="container-fluid">          
               <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776; </span>      
               <div id="logodiv">
-                <img class="logo" src="../Images/Logo1.png" alt="Logo" >
+                <a href="userhomepage.html">
+                  <img class="logo" src="../Images/Logo1.png" alt="Logo" >
+                </a>
               </div>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
