--- a/Templates/service.html
+++ b/Templates/service.html
@@ -27,7 +27,7 @@
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="#">About us</a>
-          <a href="service.html">Nearest Service Location</a>
+          <a href="#">Nearest Service Location</a>
           <a href="Accomodation.html">Stocks and Accomodation</a>
           <a href="service.html">Service Helpline Number</a>
           <a href="#">Nearby Status</a>
@@ -39,35 +39,44 @@
 
         <br><br>
 
-        <table>
+        <table class="accomodation-table">
+          <thead>
             <tr>
-              <th>Help Line Service </th>
+              <th>Helpline Service</th>
               <th>Number</th>
             </tr>
+          </thead>
+          <tbody>
             <tr>
-              <td>NATIONAL EMERGENCY NUMBER</td>
+              <td>National Emergency</td>
               <td>112</td>
             </tr>
+        
             <tr>
-                <td>Police Station</td>
-                <td>100</td>
+              <td>Police Station</td>
+              <td>100</td>
             </tr>
+        
             <tr>
-                <td>Ambulance</td>
-                <td>102</td>
+              <td>Ambulance</td>
+              <td>102</td>
             </tr>
+        
             <tr>
-                <td>Fire</td>
-                <td>101</td>
+            <td>Fire</td>
+            <td>101</td>
             </tr>
+        
             <tr>
-                <td>Disaster Management Services</td>
-                <td>108</td>
+              <td>Disaster Management Services</td>
+              <td>108</td>
             </tr>
+        
             <tr>
-                <td>Air Ambulance</td>
-                <td>9540161344 </td>
+              <td>Air Ambulance</td>
+              <td>9540161344</td>
             </tr>
+          </tbody>
         </table>
 
         <script>
