--- a/Templates/userhomepage.html
+++ b/Templates/userhomepage.html
@@ -35,7 +35,7 @@
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#">About us</a>
-      <a href="service.html">Nearest Service Location</a>
+      <a href="#">Nearest Service Location</a>
       <a href="Accomodation.html">Stocks and Accomodation</a>
       <a href="service.html">Service Helpline Number</a>
       <a href="#">Nearby Status</a>
