--- a/css/service.css
+++ b/css/service.css
@@ -4,6 +4,7 @@
 
 #search{
   align-self: right;
+  margin-right: 2vh;
 }
 
 .logo{
@@ -13,51 +14,181 @@
 
   }
   #logodiv{
-    margin-left: -3vh;
+    margin-left: -1vh;
     margin-right: auto;
     float: left;
     overflow: hidden;
   }
-  body{
-=======
-}
-
-#logodiv{
-  margin-left: -3vh;
-  margin-right: auto;
-  float: left;
-  overflow: hidden;
-}
 
 body{
 
       background-image: linear-gradient(rgb(255,255,255),rgb(82, 193, 245));   
       background-attachment: fixed; 
 }
-  
-table{
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
+table.accomodation-table {
+      border-collapse: separate;
+      border-radius: 10px;
+      border-spacing: 0;
+      box-shadow: 0 0 25px #aaa;
+      margin: 4rem 0;
+      width: 70%;
       margin-left: auto;
       margin-right: auto;
-      width: 1200px;
-}
-    
-td, th {
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-}
-    
-tr:nth-child(even) {
-      background-color: #dddddd;
-
+      table-layout: fixed;
     }
-
+    
+    th {
+      background-color: #fff;
+      font-weight: normal;
+      border-bottom: 1px solid #d1d1d1;
+    }
+    
+    th,
+    td {
+      line-height: 1.5;
+      padding: 0.75em;
+      text-align: center;
+    }
+    
+    td {
+      background-color: white;
+    }
+    
+    td:first-child {
+      font-weight: bold;
+      text-align: left;
+    }
+    
+    tbody tr:nth-child(odd) td {
+      background-color: #f6f6f6;
+    }
+    
+    thead th:first-child {
+        border-top-left-radius: 10px;
+        text-align: left;
+    }
+    
+    thead th:nth-child(2) {
+      text-align: center;
+    }
+    thead th:nth-child(3) {
+      text-align: center;
+    }
+    
+    thead th:last-child {
+      border-top-right-radius: 10px;
+      text-align: center;
+    }
+    
+    thead th:last-child {
+        border-top-right-radius: 10px;
+        text-align: center;
+    }
+    
+    tbody tr:last-child td:first-child {
+      border-bottom-left-radius: 10px;
+    }
+    
+    tbody tr:last-child td:last-child {
+      border-bottom-right-radius: 10px;
+    }
+    
+    /* Stack rows vertically on small screens */
+    @media (max-width: 30rem) {
+      /* Hide column labels */
+      thead tr {
+        position: absolute;
+        top: -9999rem;
+        left: -9999rem;
+      }
+    
+      tbody tr td {
+        border-radius: none;
+        text-align: left;
+      }
+    
+      tbody tr:first-child td:first-child {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+      }
+      tbody tr:last-child td:last-child {
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+    
+      /* Leave a space between table rows */
+      tr + tr td:first-child {
+        border-top: 1px solid #d1d1d1;
+      }
+    
+      /* Get table cells to act like rows */
+      tr,
+      td {
+        display: block;
+      }
+    
+      td {
+        border: none;
+        /* Leave a space for data labels */
+        padding-left: 50%;
+      }
+    
+      /* Data labels */
+      td:before {
+        content: attr(data-label);
+        display: inline-block;
+        font-weight: bold;
+        line-height: 1.5;
+        margin-left: -100%;
+        width: 100%;
+      }
+    }
+    
+    .sidenav {
+          height: 100%;
+          width: 0;
+          position: fixed;
+          z-index: 1;
+          top: 0;
+          left: 0;
+          background-color: #111;
+          overflow-x: hidden;
+          transition: 0.5s;
+          padding-top: 60px;
+    }
+        
+    .sidenav a {
+          padding: 8px 8px 8px 32px;
+          text-decoration: none;
+          font-size: 25px;
+          color: #818181;
+          display: block;
+          transition: 0.3s;
+    }
+        
+    .sidenav a:hover {
+          color: #f1f1f1;
+    }
+        
+    .sidenav .closebtn {
+          position: absolute;
+          top: 0;
+          right: 25px;
+          font-size: 36px;
+          margin-left: 50px;
+    }
+        
+    #main {
+          transition: margin-left .5s;
+          padding: 16px;
+    }
+        
+    @media screen and (max-height: 450px) {
+          .sidenav {padding-top: 15px;}
+          .sidenav a {font-size: 18px;}
+    }
 h2{
   text-align: center;
-}   
-=======
 }
 
   
